--- a/css/style.css
+++ b/css/style.css
@@ -14,21 +14,20 @@
     align-items: center;
 }
 
-#scoreBox{
-    background-color: aliceblue;
+.scores{
+    background-color: rgb(92, 96, 97);
     position: absolute;
     top: 22px;
-    right: 200px;
+    right: 200px; 
+}
+
+#scoreBox{
     font-size: 39px;
     font-weight: bold;
     font-family: 'New Tegomin', serif;
 }
 
 #hiscoreBox{
-    background-color: aliceblue;
-    position: absolute;
-    top: 70px;
-    right: 125px;
     font-size: 39px;
     font-weight: bold;
     font-family: 'New Tegomin', serif;
@@ -38,10 +37,8 @@
     width: 50px;
     position: absolute;
     bottom: 70px;
-    right: 600px;
+    right: 550px;
     margin:0 15px;
-    border:2px solid rgb(253, 255, 255);
-    border-radius: 9px;
     cursor: pointer;
 }
 
@@ -49,8 +46,8 @@
 
 #board{
     background: linear-gradient(rgb(3, 90, 71), rgb(236, 236, 167));
-    width: 90vmin;
-    height: 92vmin;
+    width: 92vmin;
+    height: 90vmin;
     position: absolute;
     top: 25px;
     left: 85px;
@@ -71,6 +68,53 @@
     background-color: rgb(223, 236, 33);
     border: .25vmin solid white;
     border-radius: 15px;
+}
+
+
+/* CSS */
+.Button {
+  align-items: center;
+  appearance: none;
+  background-image: radial-gradient(100% 100% at 100% 0, #5adaff 0, #5468ff 100%);
+  border: 0;
+  border-radius: 6px;
+  box-shadow: rgba(45, 35, 66, .4) 0 2px 4px,rgba(45, 35, 66, .3) 0 7px 13px -3px,rgba(58, 65, 111, .5) 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: "JetBrains Mono",monospace;
+  height: 48px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow .15s,transform .15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow,transform;
+  font-size: 18px;
+}
+
+.Button:focus {
+  box-shadow: #3c4fe0 0 0 0 1.5px inset, rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
+}
+
+.Button:hover {
+  box-shadow: rgba(45, 35, 66, .4) 0 4px 8px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
+
+.Button:active {
+  box-shadow: #3c4fe0 0 3px 7px inset;
+  transform: translateY(2px);
 }
 
 .food{
