--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@
     padding: 20px;
     width: 50px;
     position: absolute;
-    bottom: 70px;
+    top: 20px;
     right: 550px;
     margin:0 15px;
     cursor: pointer;
